plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group 'com.mystic'
version '1.0.0'

ext {
    junitVersion = '5.10.0'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(24)

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'com.mystic.tarotboard.TarotBoard'
}

javafx {
    version = '22-ea+11'
    modules = ['javafx.controls', 'javafx.fxml', "javafx.graphics", "javafx.swing"]
}

repositories {
    mavenCentral()
    maven {
        url = "https://maven.generations.gg/releases"
    }
}

dependencies {
    implementation("com.traneptora:jxlatte:2.0.0")
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}

shadowJar {
    manifest {
        attributes(
                'Main-Class': 'com.mystic.tarotboard.Launcher'
        )
        from('src/main/resources/META-INF/MANIFEST.MF')  // Path to your MANIFEST.MF file
    }
    mergeServiceFiles()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.mystic.tarotboard.Launcher'
        )
        from('src/main/resources/META-INF/MANIFEST.MF')  // Path to your MANIFEST.MF file
    }
}